--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>17</java.version>
         <testcontainer.version>1.18.0</testcontainer.version>
         <rest-assured.version>4.5.0</rest-assured.version>
+        <java-jwt.version>3.18</java-jwt.version>
     </properties>
     <dependencies>
         <dependency>
@@ -30,6 +31,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.hateoas</groupId>
