--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,16 @@
 cors:
-  originPatterns: http://localhost:8080,http://localhost:3000,https://lrz.com.br    
+  originPatterns: http://localhost:8080,http://localhost:3000,https://lrz.com.br
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-lenght: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/udemy?useTimezone=true&serverTimezone=UTC
-    username: lara
-    password: 13182001
+    username: 
+    password: 
   jpa:
     hibernate:
       ddl-auto: none
