--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,7 +2,11 @@ server:
   port: 8888
 cors:
   originPatterns: http://localhost:8080,http://localhost:3000,https://lrz.com.br    
-
+security:
+  jwt:
+    token:
+      secret-key: 53cr37
+      expire-lenght: 3600000
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
