--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -1,45 +1,45 @@
-name: Continuous Integration with Github Actions
+name: Continuous Integration with GitHub Actions
 
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Docker Login
-      uses: docker/login-action@v2.0.0
-      with:   
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-   
-          
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'adopt'
-        cache: maven
-    - name: Build with Maven
-      working-directory: /api-basics
-      run: mvn clean package
-      
-    - name: Build Docker Compose
-      working-directory: /api-basics
-      run: docker compose build
-    
-    - name: Docker Hub Push
-      run: |
-        docker tag ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.run_id}} 
-        docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:latest
-        docker push ${{ secrets.DOCKER_USERNAME }}/api-gateway:${{github.run_id}}
+      - uses: actions/checkout@v3
 
+      - name: List repository files
+        run: ls -la
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+      - name: Docker Login
+        uses: docker/login-action@v2.0.0
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build with Maven
+        run: mvn clean package
+
+      - name: Build Docker Compose
+        run: docker compose build
+
+      - name: Docker Hub Push
+        run: |
+          docker tag ${{ secrets.DOCKER_USERNAME }}/api-basics:latest ${{ secrets.DOCKER_USERNAME }}/api-basics:${{ github.run_id }}
+          docker push ${{ secrets.DOCKER_USERNAME }}/api-basics:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/api-basics:${{ github.run_id }}
+
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
